# chernobyl

./: .clang-format  .gitignore  CMakeLists.txt  README.md  mutator_module.cpp
.github/workflows/: cmake-single-platform.yml
checks/: and_to_or.h  common.h  eq_to_neq.h  false_to_true.h  greater_eq_to_less_eq.h  greater_to_less.h  less_eq_to_greater_eq.h  less_to_greater.h  neq_to_eq.h  or_to_and.h  reverse_if_cond.h  true_to_false.h
test/: and-to-or.py  runner.py
